[package]
name = "comet"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Reactive Isomorphic Web Framework"
repository = "https://github.com/Champii/Comet"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "bin/main.rs"
name = "comet"

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.30"
futures = { version = "0.3"}
paste = "1.0.9"
comet_macro_procs = { path = "./macros/macro_procs/", version = "0.1.2" }
comet_macro_rules = { path = "./macros/macro_rules/", version = "0.1.2" }
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
lazy_static = "1.4.0"
derive_more = "0.99.17"
async-trait = "0.1.58"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'DomTokenList',
  'HtmlInputElement',
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.5.17", features = ["ws"] }
tokio = { version = "1.21.2", features = ["full"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
reactive-pg = { path = "../reactive-postgres-rs/", version = "0.1.2" }
diesel = { version = "2.0.2", features = ["postgres"] }
# bin dependencies
env_logger = "0.9.1"
log = "0.4.17"
colored = "2"
which = "4.3.0"
clap = "2.33.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = "0.7.3"
pharos = "0.5"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"
tokio = { version = "1.21.2", features = ["sync"] }
diesel = { version = "2.0.2", default-features = false }


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
