[package]
name = "comet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.30"
futures = { version = "0.3"}
paste = "1.0.9"
comet_macros = { path = "../comet_macros/" }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
