[package]
name = "comet"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.30"
futures = { version = "0.3"}
paste = "1.0.9"
comet_macro_procs = { path = "../comet_macros/macro_procs/" }
comet_macro_rules = { path = "../comet_macros/macro_rules/" }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'DomTokenList',
  'HtmlInputElement',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
