[package]
name = "comet_bin"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "comet"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
env_logger = "0.9.1"
log = "0.4.17"
colored = "2"
which = "4.3.0"
