[package]
name = "comet_macro_procs"
version = "0.1.2"
description = "Macros for Comet"
repository = "https://github.com/Champii/Comet"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
proc-macro2 = "0.4"
quote = "0.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
