[package]
name = "comet_macro_procs"
version = "0.1.2"
description = "Macros for Comet"
repository = "https://github.com/Champii/Comet"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.47"
quote = "1.0.21"
itertools = "0.10.5"
lazy_static = "1.4.0"
derive-syn-parse = "0.1.5"
